# Glide

./: .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml
.github/: AppxManifest.xml  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  hook.rs  lib.rs  main.rs  overlay.rs  snap.rs  window_manager.rs
src/lib/: config.test.ts  config.ts  store.ts
src/routes/: +page.svelte
